tidy: Remove XaunaFS from code
Xauna is both confusing for current developers and newer ones. This
commit renames it mostly to legacy, which indicates that these should not be
used and replaced where possible.

--- a/src/cgi/index.html
+++ b/src/cgi/index.html
@@ -6,7 +6,7 @@
 		<script type="text/javascript">
 			document.location.href="sfs.cgi"
 // the above uses default parameter values; full invocation example is shown below
-//			document.location.href="sfs.cgi?masterhost=127.0.0.1&amp;masterport=9421&amp;mastername=XaunaFS"
+//			document.location.href="sfs.cgi?masterhost=127.0.0.1&amp;masterport=9421&amp;mastername=SaunaFS"
 		</script>
 	</head>
 	<body>
